# ozone

./: .gitignore  CMakeLists.txt
src/: api.c  api.h  avl.c  fs.c  mem.c  ozone.c  ozone.h  screen.c  scripts.c  scripts.h  string.c  theme.c  theme.h  time.c  utf8.c
src/scripts/: config.lua  ozone.lua
src/scripts/editor/: editor.lua
src/scripts/theme/: sulfur.lua
src/v01/: ozone.cpp  ozone.hpp
